<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	app:startDestination="@id/nav_home">

	<keep_state_fragment
		android:id="@+id/nav_home"
		android:name="open.v0gdump.varlamov.ui.home.HomeScreen"
		android:label="@string/nav_home"
		tools:layout="@layout/fragment_home" />

	<keep_state_fragment
		android:id="@+id/nav_publications"
		android:name="open.v0gdump.varlamov.ui.publications.PublicationsScreen"
		android:label="@string/nav_publications"
		tools:layout="@layout/fragment_publications" />

	<keep_state_fragment
		android:id="@+id/nav_news"
		android:name="open.v0gdump.varlamov.ui.news.NewsScreen"
		android:label="@string/nav_news"
		tools:layout="@layout/fragment_by_tag" />

</navigation>