<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:elevation="0dp"
	android:layout_marginTop="1dp"
	android:layout_marginEnd="1dp"
	android:background="?selectableItemBackground"
	android:foreground="?android:attr/selectableItemBackground"
	android:clickable="true"
	android:focusable="true">

	<androidx.appcompat.widget.LinearLayoutCompat
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:paddingTop="12dp"
		android:paddingBottom="12dp"
		android:paddingStart="8dp"
		android:paddingEnd="8dp">

		<androidx.appcompat.widget.AppCompatTextView
			android:id="@+id/publication_datetime"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/date"
			android:textAppearance="@style/TextAppearance.AppCompat.Caption"
			android:layout_margin="4dp"/>

		<androidx.appcompat.widget.AppCompatTextView
			android:id="@+id/publication_title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/title"
			android:textAppearance="@style/TextAppearance.AppCompat.Title"
			android:layout_margin="4dp"/>

		<androidx.appcompat.widget.AppCompatTextView
			android:id="@+id/publication_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/blank"
			android:layout_marginTop="8dp"
			android:layout_marginBottom="8dp"
			android:layout_marginStart="4dp"
			android:layout_marginEnd="4dp"/>

		<androidx.appcompat.widget.LinearLayoutCompat
			android:id="@+id/publication_tags_container"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:layout_margin="4dp">

			<androidx.appcompat.widget.AppCompatImageView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:src="@drawable/ic_tags"
				android:layout_marginEnd="4dp"/>

			<androidx.appcompat.widget.AppCompatTextView
				android:id="@+id/publication_tags"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textAppearance="@style/TextAppearance.AppCompat.Small"
				android:layout_gravity="center"/>

		</androidx.appcompat.widget.LinearLayoutCompat>
	</androidx.appcompat.widget.LinearLayoutCompat>
</androidx.cardview.widget.CardView>
